[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/user interface/Font/FantasticParty.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UserInterface/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/user interface/FlatUI/kenneyUI-blue.tres" type="Theme" id=4]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=6]
[ext_resource path="res://assets/user interface/Font/NineTsukiRegular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/UserInterface/ResumeButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UserInterface/MenuButton.gd" type="Script" id=9]
[ext_resource path="res://src/Screens/CheckMusic.gd" type="Script" id=10]
[ext_resource path="res://src/Screens/CheckEffects.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
theme = ExtResource( 4 )
script = ExtResource( 6 )

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -219.0
margin_top = 20.0
margin_right = -19.0
margin_bottom = 67.0
custom_colors/font_color = Color( 1, 0.796078, 0, 1 )
custom_fonts/font = SubResource( 1 )
uppercase = true

[node name="Health" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -489.0
margin_top = 20.0
margin_right = -375.0
margin_bottom = 58.0
custom_colors/font_color = Color( 1, 0.796078, 0, 1 )
custom_fonts/font = SubResource( 1 )
uppercase = true

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -369.0
margin_top = 29.0
margin_right = -267.0
margin_bottom = 50.0
theme = ExtResource( 4 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="PauseTitle" type="RichTextLabel" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -413.0
margin_right = 512.0
margin_bottom = 187.0
custom_colors/default_color = Color( 1, 0.796078, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave][center]PAUSA[/center][/wave]"
text = "PAUSA"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -91.0
margin_right = 125.0
margin_bottom = 169.0

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay/HBoxContainer"]
margin_right = 139.0
margin_bottom = 260.0

[node name="ResumeButton" parent="PauseOverlay/HBoxContainer/PauseMenu" instance=ExtResource( 8 )]
margin_right = 139.0
margin_bottom = 84.0

[node name="RetryButton" parent="PauseOverlay/HBoxContainer/PauseMenu" instance=ExtResource( 5 )]
margin_top = 88.0
margin_right = 139.0
margin_bottom = 172.0

[node name="MenuButton" parent="PauseOverlay/HBoxContainer/PauseMenu" instance=ExtResource( 3 )]
margin_top = 176.0
margin_right = 139.324
margin_bottom = 260.0
text = "MENU PRINCIPALE"
script = ExtResource( 9 )
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/HBoxContainer"]
margin_left = 143.0
margin_right = 248.0
margin_bottom = 260.0
alignment = 1

[node name="CheckMusic" type="CheckButton" parent="PauseOverlay/HBoxContainer/VBoxContainer"]
margin_right = 105.324
margin_bottom = 128.0
size_flags_vertical = 3
pressed = true
text = "MUSICA"
align = 1
script = ExtResource( 10 )

[node name="CheckEffects" type="CheckButton" parent="PauseOverlay/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 105.0
margin_bottom = 260.0
size_flags_vertical = 3
pressed = true
text = "EFFETTI"
align = 1
script = ExtResource( 11 )

[connection signal="button_up" from="PauseOverlay/HBoxContainer/VBoxContainer/CheckMusic" to="PauseOverlay/HBoxContainer/VBoxContainer/CheckMusic" method="_on_button_up"]
[connection signal="button_up" from="PauseOverlay/HBoxContainer/VBoxContainer/CheckEffects" to="PauseOverlay/HBoxContainer/VBoxContainer/CheckEffects" method="_on_button_up"]
